# bkgm

./: .gitignore  Cargo.toml  LICENSE  PERF_OPTIMIZATION_LOG.md  README.md
.github/workflows/: build.yaml
benches/: movegen_bench.rs
src/: backgammon.rs  bearoff.rs  dice.rs  dice_gen.rs  engine_spec.rs  game.rs  hypergammon.rs  lib.rs  main.rs  movement.rs  position.rs  rules.rs  ubgi.rs  utils.rs  variants.rs  xgid.rs
src/codecs/: fibs.rs  gnuid.rs  mod.rs  move_text.rs  xgid.rs
src/position/: conversion.rs  double_moves.rs  mixed_moves.rs  regular_moves.rs
src/ubgi/: runtime.rs
