[package]
name = "bkgm"
version = "0.4.0"
edition = "2021"
authors = ["Jonathan Good <jonathan@bungogood.com>"]
description = "A Rust Backgammon library"
documentation = "https://docs.rs/bkgm/latest/bkgm"
readme = "README.md"
repository = "https://github.com/bungogood/bkgm"
license = "MIT"
keywords = ["backgammon"]
exclude = [".github/"]

[dependencies]
base64 = "0.21.4"
fastrand = "2.3.0"
mimalloc = { version = "0.1.48", default-features = false }

[dev-dependencies]
criterion = "0.5"

[[bench]]
name = "movegen_bench"
harness = false

[profile.release]
debug = true
